objects/CSS_WS_Engine_Application_Code__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting that stores information about Engine Application Codes</description>
    <fields>
        <fullName>Application_Code__c</fullName>
        <label>Application Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Description__c</fullName>
        <label>Application Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automotive_Flag__c</fullName>
        <label>Automotive Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Measurement__c</fullName>
        <label>Default Measurement</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marine_Flag__c</fullName>
        <label>Marine Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>CSS WS Engine Application Code</label>
</CustomObject>